FAQ and Countdown

--- a/index.html
+++ b/index.html
@@ -578,8 +578,8 @@
 			</div>
 			<div class="card bg-white border-secondary shadow-sm mb-4">
 				<div class="card-body">
-					<a class="toggle-btn" data-toggle="collapse" data-target="#faq2"
-						aria-expanded="falria-controls= faq2">
+					<a class="toggle-btn" data-toggle="collapse" data-target="#faq2" aria-expanded="false"
+						aria-controls="faq2">
 						<b>Lorem Ipsum is simply dummy text of the printing and typesetting industry ?</b>
 						<span class="arrow"></span>
 					</a>
@@ -594,8 +594,8 @@
 			</div>
 			<div class="card bg-white border-secondary shadow-sm mb-4">
 				<div class="card-body">
-					<a class="toggle-btn" data-toggle="collapse" data-target="#faq3"
-						aria-expanded="falria-controls= faq3">
+					<a class="toggle-btn" data-toggle="collapse" data-target="#faq3" aria-expanded="false"
+						aria-controls="faq3">
 						<b>Lorem Ipsum is simply dummy text of the printing and typesetting industry ?</b>
 						<span class="arrow"></span>
 					</a>
@@ -611,8 +611,8 @@
 			</div>
 			<div class="card bg-white border-secondary shadow-sm mb-4">
 				<div class="card-body">
-					<a class="toggle-btn" data-toggle="collapse" data-target="#faq4"
-						aria-expanded="falria-controls= faq4">
+					<a class="toggle-btn" data-toggle="collapse" data-target="#faq4" aria-expanded="false"
+						aria-controls="faq4">
 						<b>Lorem Ipsum is simply dummy text of the printing and typesetting industry ?</b>
 						<span class="arrow"></span>
 					</a>
