--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
 	<!-- START HOME & Section 2 -->
 	<section id="home" class="home_bg"
-		style="background-image: url(assets/img/bg/home-static-2.png);  background-size:cover; background-position: center center;">
+		style="background-image: url(assets/img/bg/home-bg.jpg);  background-size:cover; background-position: center center;">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-8 offset-lg-2 col-sm-12 col-xs-12">
@@ -129,17 +129,6 @@
 		<!--- END CONTAINER -->
 	</section>
 	<!-- END  HOME -->
-
-	<!-- Start Timer -->
-	<section class="partner-logo section-padding">
-		<div class="container">
-			<div class="text-center">
-				<a href="https://logwork.com/countdown-w5dw" class="countdown-timer" data-style="flip"
-					data-timezone="Asia/Jakarta" data-date="2022-10-03 00:00" data-background="#000">Countdown</a>
-			</div>
-		</div>
-	</section>
-	<!-- END -->
 
 	<!-- START Section 3-->
 	<section id="section3" class="about-content section-padding">
@@ -171,6 +160,16 @@
 	</section>
 	<!-- END -->
 
+	<!-- Start Countdown -->
+	<section class="partner-logo section-padding">
+		<div class="container">
+			<div class="text-center">
+				<a href="https://logwork.com/countdown-w5dw" class="countdown-timer" data-style="flip"
+					data-timezone="Asia/Jakarta" data-date="2022-10-03 00:00" data-background="#000">Countdown</a>
+			</div>
+		</div>
+	</section>
+	<!-- END -->
 
 	<!-- START section 4-new -->
 	<section id="section4" class="fresh-news about-content-two section-padding">
