--- a/index.html
+++ b/index.html
@@ -475,15 +475,15 @@
 			</div>
 			<div class="row">
 				<div class="col-md-6 col-sm-12 col-xs-12">
-					<div class="single_service">
-						<span class="ti-book"></span>
+					<div class="single_service single-about">
+						<span class=" ti-book"></span>
 						<h3>Lorem Ipsum Dolor</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae accusantium consectetur.</p>
 					</div>
 				</div>
 				<!--END COL -->
 				<div class="col-md-6 col-sm-12 col-xs-12">
-					<div class="single_service">
+					<div class="single_service single-about">
 						<span class="ti-hand-drag"></span>
 						<h3>Lorem Ipsum dolor</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae accusantium consectetur.</p>
@@ -491,7 +491,7 @@
 				</div>
 				<!--END COL -->
 				<div class="col-md-6 col-sm-12 col-xs-12">
-					<div class="single_service">
+					<div class="single_service single-about">
 						<span class="ti-light-bulb"></span>
 						<h3>Lorem Ipsum dolor</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae accusantium consectetur.</p>
@@ -499,7 +499,7 @@
 				</div>
 				<!--END COL -->
 				<div class="col-md-6 col-sm-12 col-xs-12">
-					<div class="single_service">
+					<div class="single_service single-about">
 						<span class="ti-crown"></span>
 						<h3>Lorem Ipsum dolor</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae accusantium consectetur.</p>
@@ -507,7 +507,7 @@
 				</div>
 				<!--END COL -->
 				<div class="col-md-6 col-sm-12 col-xs-12">
-					<div class="single_service">
+					<div class="single_service single-about">
 						<span class="ti-light-bulb"></span>
 						<h3>Lorem Ipsum dolor</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae accusantium consectetur.</p>
@@ -515,7 +515,7 @@
 				</div>
 				<!--END COL -->
 				<div class="col-md-6 col-sm-12 col-xs-12">
-					<div class="single_service">
+					<div class="single_service single-about">
 						<span class="ti-crown"></span>
 						<h3>Lorem Ipsum dolor</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae accusantium consectetur.</p>
@@ -623,10 +623,10 @@
 							<h1>$20</h1>
 						</div>
 						<ul class="pricing-content text-center mt-4" style="list-style-type: none;">
-							<li>5 Lorem Ipsum</li>
-							<li>10 Lorem Ipsum</li>
-							<li>15 Lorem Ipsum</li>
-							<li>Lorem Ipsum</li>
+							<li><span class="ti-check-box text-info"></span>&nbsp;&nbsp;5 Lorem Ipsum</li>
+							<li><span class="ti-check-box text-info"></span>&nbsp;&nbsp;10 Lorem Ipsum</li>
+							<li><span class="ti-check-box text-info"></span>&nbsp;&nbsp;15 Lorem Ipsum</li>
+							<li><span class="ti-check-box text-info"></span>&nbsp;&nbsp;Lorem Ipsum</li>
 						</ul>
 						<div class="text-center mt-5 pb-5">
 							<a href="#" class="btn btn-lg bg-info text-light"> Get this course </a>
@@ -645,11 +645,11 @@
 							<h3 class="price-value mt-2 pt-4"><strike>$80</strike></h3>
 							<h1>$70</h1>
 						</div>
-						<ul class="pricing-content text-center mt-4">
-							<li>5 Lorem Ipsum</li>
-							<li>10 Lorem Ipsum</li>
-							<li>15 Lorem Ipsum</li>
-							<li>Lorem Ipsum</li>
+						<ul class="pricing-content text-center mt-4" style="list-style-type: none;">
+							<li><span class="ti-check-box text-danger"></span>&nbsp;&nbsp;5 Lorem Ipsum</li>
+							<li><span class="ti-check-box text-danger"></span>&nbsp;&nbsp;10 Lorem Ipsum</li>
+							<li><span class="ti-check-box text-danger"></span>&nbsp;&nbsp;15 Lorem Ipsum</li>
+							<li><span class="ti-check-box text-danger"></span>&nbsp;&nbsp;Lorem Ipsum</li>
 						</ul>
 						<div class="text-center mt-5 pb-5">
 							<a href="#" class="btn btn-lg bg-danger text-light"> Get this course </a>
