Ukuran Kotak study method sama rata

--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-6 col-sm-12 col-xs-12">
-					<div class="single_service single-about">
+					<div class="single_service single-about" style="height: 343.8px;">
 						<span class="ti-video-camera"></span>
 						<h3>The 8 Viral Factor Video</h3>
 						<p>learn the 4 main elements that cause a video to go viral. and find out 4 additional elements that help video go viral</p>
@@ -483,7 +483,7 @@
 				</div>
 				<!--END COL -->
 				<div class="col-md-6 col-sm-12 col-xs-12">
-					<div class="single_service single-about">
+					<div class="single_service single-about" style="height: 343.8px;">
 						<span class="ti-stats-up"></span>
 						<h3>37 Viral Score Card System</h3>
 						<p>find out the potential of your video idea through 37 viral scorecard system that will automatically assess how viral your video idea will be</p>
@@ -491,7 +491,7 @@
 				</div>
 				<!--END COL -->
 				<div class="col-md-6 col-sm-12 col-xs-12">
-					<div class="single_service single-about">
+					<div class="single_service single-about" style="height: 343.8px;">
 						<span class="ti-youtube"></span>
 						<h3>Analysis of 7 Famous Youtubers Video</h3>
 						<p>learn the secret behind the success of videos produced by famous youtubers such as MrKokom, Syahmi Syazli, Alieff Irfan, Isa Isarb, MTAS production and ASA Production</p>
@@ -499,7 +499,7 @@
 				</div>
 				<!--END COL -->
 				<div class="col-md-6 col-sm-12 col-xs-12">
-					<div class="single_service single-about">
+					<div class="single_service single-about" style="height: 343.8px;">
 						<span class="ti-video-clapper"></span>
 						<h3>44 Types Of Videos That Go Viral</h3>
 						<p>know the 3 types of viral videos. follow to trend, preparation methods and emotions. Also learn to all 44 types of viral videos you can produce</p>
@@ -507,7 +507,7 @@
 				</div>
 				<!--END COL -->
 				<div class="col-md-6 col-sm-12 col-xs-12">
-					<div class="single_service single-about">
+					<div class="single_service single-about" style="height: 343.8px;">
 						<span class="ti-stats-up"></span>
 						<h3>11 strategies Video To Go Viral</h3>
 						<p>Video production proccess step. Learn the 11 main steps you need to take to produce a viral video. starting from the way of preparation, production and the right way of posting</p>
@@ -515,7 +515,7 @@
 				</div>
 				<!--END COL -->
 				<div class="col-md-6 col-sm-12 col-xs-12">
-					<div class="single_service single-about">
+					<div class="single_service single-about" style="height: 343.8px;">
 						<span class="ti-key"></span>
 						<h3>The Secret to Success of 7 Famous Youtubers</h3>
 						<p>Know the secret behind the success of every famous YouTuber's video so that their videos go viral and get many views and subscribers increase exponentially</p>
