--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
 			</div>
 		</div>
 	</div> -->
-	<section id="section4-2" class="cta_bg">
+	<section id="section4-2" class="cta_bg mb-5">
 		<div class="container">
 			<div class="d-flex row" style="background-color: #1A2124;">
 				<div class="col-md-6 p-0">
@@ -376,12 +376,13 @@
 						<div class="flex-column">
 							<h1>Start your</h1>
 							<h1>Journey !</h1>
-							<a class="cta_button mt-3"
-								href="https://wa.me/6585896007/?text=Hi%2C%20I%27m%20interested%20in%20your%20program.">Join
-								Now</a>
 						</div>
 					</div>
 				</div>
+			</div>
+			<div class="d-flex flex-column mt-5">
+				<a class="ctaa_btn text-center rounded-pill mt-3"
+						href="https://wa.me/6585896007/?text=Hi%2C%20I%27m%20interested%20in%20your%20program.">Join Now !</a>
 			</div>
 		</div>
 	</section>
@@ -1465,23 +1466,11 @@
 	<div id="section11" class="about-content-three"
 		style="background-image: url(assets/img/DSC3.JPG);  background-size:cover;background-position:center;">
 		<div class="container">
-			<div class="row">
-				<div class="col-lg-8 offset-lg-2 col-sm-12 col-xs-12">
-					<div class="text-light">
-						<h2 class="text-light"><strong> Get Offer & </strong></h2>
-						<h2 class="text-light"><strong> Go Viral Now </strong></h2>
-						<div class="cta">
-							<a class="get_btn mt-2 p-3" aria-label="Chat on WhatsApp"
-								href="https://wa.me/6585896007/?text=Hi%2C%20I%27m%20interested%20in%20your%20program."
-								target="_blank">
-								<i class="fa-brands fa-whatsapp fa-fw"></i> Chat on Whatsapp
-							</a>
-						</div>
-					</div>
-				</div>
+			<div class="d-flex flex-column">
+				<a class="ctaa2_btn text-center rounded-pill"
+						href="https://wa.me/6585896007/?text=Hi%2C%20I%27m%20interested%20in%20your%20program.">Get Offer and Viral Now !</a>
 			</div>
 		</div>
-
 	</div>
 	<!-- END -->
 
