--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
 					<div class="about-two">
 						<h1>Mastering Essentials Strategy to Reach and <b>Become Viral With Video</b></h1>
 						<p>Viral Video Bootcamp is a video learning program with updated material about video content.
-							Lead by famous youtubers and experienced lecturers. Learn the fundamentals and best practice
-							of making video to go viral from the best practitioners.</p>
+							Learn the funfamentals of making viral video from the best practitioners. Lead by famous
+							youtubers and experienced lectures.</p>
 						<!-- <a class="about-btn" href="about.html">Know More</a> -->
 					</div>
 				</div>
@@ -176,10 +176,10 @@
 	</section>
 	<!-- END  -->
 
-	<!--Two Image-->
+	<!--Testimonial-->
 	<section id="project" class="our_pricing section-padding">
 		<div class="container">
-			<div class="section-title text-center">
+			<div class="section-title text-center mb-0 mt-4">
 				<h1 style="color: white;">Clients Say About MrKokom</h1>
 			</div>
 
@@ -192,24 +192,25 @@
 				</div>
 				<div class="item">
 					<a href="assets/img/pic3.png" alt="Client's Review" class="image-popup">
-						<img src="assets/img/3.png" alt="Client's Review" title="">
+						<img src="assets/img/3.png" alt="Client's Review" title="img-thumbnail">
 					</a>
 				</div>
 				<div class="item">
 					<a href="assets/img/pic4.png" alt="Client's Review" class="image-popup">
-						<img src="assets/img/4.png" alt="Client's Review" title="">
+						<img src="assets/img/4.png" alt="Client's Review" title="img-thumbnail">
 					</a>
 				</div>
 				<div class="item">
 					<a href="assets/img/pic5.png" alt="Client's Review" class="image-popup">
-						<img src="assets/img/5.png" alt="Client's Review" title="">
+						<img src="assets/img/5.png" alt="Client's Review" title="img-thumbnail">
 					</a>
 				</div>
 				<div class="item">
 					<a href="assets/img/pic1.png" alt="Client's Review" class="image-popup">
-						<img src="assets/img/1.png" alt="Client's Review" title="">
+						<img src="assets/img/1.png" alt="Client's Review" title="img-thumbnail">
 					</a>
 				</div>
+
 			</div>
 
 		</div>
@@ -338,34 +339,7 @@
 	<!-- END -->
 
 	<!-- CTA -->
-	<!-- <div id="section4-2" style="background-color: #fff;" class="about-content-two">
-		<div class="container mb-5 pb-5">
-			<div class="text-light">
-				<div class="row">
-					<div class="col-md-4 col-sm-4 col-xs-4 text-center"
-						style="background-color: #0D5360ff; height: 210px; display:flex; align-items: center; justify-content: center;">
-						<div>
-							<h3 class="text-light mb-4 sh3" style=" text-shadow: #22223b 3px 3px 0px;"><strong> Start
-									your
-									Journey!
-								</strong></h3>
-							<form
-								action="https://wa.me/6585896007/?text=Hi%2C%20I%27m%20interested%20in%20your%20program./"
-								method="get" target="_blank">
-								<button class="ctabtn" target="_blank" type="submit">
-									Join Now
-								</button>
-							</form>
-						</div>
-					</div>
-					<div class="col-md-8 col-sm-8 col-xs-8 text-center"
-						style="background: url(assets/img/DSC3.JPG) no-repeat center; background-size: cover;">
-					</div>
-				</div>
-			</div>
-		</div>
-	</div> -->
-	<section id="section4-2" class="cta_bg mb-5">
+	<!-- <section id="section4-2" class="cta_bg">
 		<div class="container">
 			<div class="d-flex row" style="background-color: #1A2124;">
 				<div class="col-md-6 p-0">
@@ -376,13 +350,34 @@
 						<div class="flex-column">
 							<h1>Start your</h1>
 							<h1>Journey !</h1>
+							<a class="cta_button mt-3"
+								href="https://wa.me/6585896007/?text=Hi%2C%20I%27m%20interested%20in%20your%20program.">Join
+								Now!</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section> -->
+	<section id="section4-2" class="cta_bg mb-5">
+		<div class="container">
+			<div class="d-flex row" style="background-color: #1A2124;">
+				<div class="col-md-6 p-0">
+					<img src="assets/img/Video Viral class web.jpg" alt="">
+				</div>
+				<div class="col-md-6 p-0 align-self-center">
+					<div class="cta_text d-flex justify-content-center">
+						<div class="flex-column">
+							<h1>Start your</h1>
+							<h1>Journey!</h1>
 						</div>
 					</div>
 				</div>
 			</div>
 			<div class="d-flex flex-column mt-5">
 				<a class="ctaa_btn text-center rounded-pill mt-3"
-						href="https://wa.me/6585896007/?text=Hi%2C%20I%27m%20interested%20in%20your%20program.">Join Now !</a>
+					href="https://wa.me/6585896007/?text=Hi%2C%20I%27m%20interested%20in%20your%20program.">Join
+					Now!</a>
 			</div>
 		</div>
 	</section>
@@ -452,7 +447,7 @@
 				</div>
 
 			</div>
-
+		</div>
 	</section>
 	<!-- END -->
 
@@ -464,15 +459,18 @@
 					<div class="mentor-title">
 						<h1 class="mt-4 ml-1">Mentor</h1>
 						<p>Learn and copy from Award-winning youtuber year 2021.</p>
-						<p class="mb-1"><img src="assets/img/medal.png" style="width: 25px; height: 25px;" alt="">
+						<p class="mb-1"><img src="assets/img/medal.png" style="width: 25px; height: 25px;"
+								alt="Youtubrity Award winner">
 							Youtubrity Award winner</p>
-						<p class="mb-1"><img src="assets/img/play.png" style="width: 25px; height: 25px;" alt=""> 2 x
+						<p class="mb-1"><img src="assets/img/play.png" style="width: 25px; height: 25px;"
+								alt="Silverplay button"> 2 x
 							silverplay button.</p>
-						<p><img src="assets/img/subscribe.png" style="width: 25px; height: 25px;" alt=""> 1.3 million Fb
+						<p><img src="assets/img/subscribe.png" style="width: 25px; height: 25px;" alt="Followers"> 1.3
+							million Fb
 							followers and 209k IG Followers</p>
 					</div>
 				</div>
-				<div class="col-lg-3 col-sm-12 col-xs-12">
+				<div class=" col-lg-3 col-sm-12 col-xs-12">
 					<div class="single-team">
 						<div class="img"><img src="assets/img/MrKokom.png" class="img-fluid" alt="Mentor 1"></div>
 						<div class="team-content">
@@ -483,7 +481,8 @@
 											class="fa-brands fa-instagram"></i></a></li>
 								<li><a href="https://www.tiktok.com/@mrkokomm?_t=8YDk24r04RO&_r=1"><i
 											class="fa-brands fa-tiktok"></i></a></li>
-								<li><a href="https://youtube.com/@MrKokom"><i class="fa-brands fa-youtube"></i></a></li>
+								<li><a href="https://youtube.com/@MrKokom"><i class="fa-brands fa-youtube"></i></a>
+								</li>
 							</ul>
 						</div>
 					</div>
@@ -1305,7 +1304,7 @@
 	<!-- END -->
 
 	<!---Start Section 9-->
-	<section id="section9" class="our_pricing section-padding">
+	<section id="section9" class="about-content our_pricing section-padding">
 		<div class="container">
 			<div class="section-title text-center">
 				<h1 class="section-title-white mt-4">Pricing plan</h1>
@@ -1317,35 +1316,71 @@
 				<div class="col-xs-4 col-md-6 col-lg-4 col-sm-12 ml-auto">
 					<div class="price-card pricingTable-2 shadow">
 						<div class="pricingTable-header text-center">
-							<div class="p-3 bg-info text-light">
+							<div class="p-3 text-light bg-info">
 								<h3 class="title text-light">Gold</h3>
 							</div>
-							<h3 class="price-value mt-2 pt-4"><strike>$598</strike></h3>
-							<h1>$492</h1>
+							<p class="price-value mt-2 pt-4" style="color: #303030;"><strike>$2098</strike>
+							</p>
+							<h1 class="text-info"><sup>$</sup>492</h1>
+							<ul class="pricing-content text-center mt-4" style="list-style-type: none;">
+								<li>
+									<i class="text-info fa-regular fa-circle-check fa-fw"></i>
+									<span>Registration
+										fee $30</span>
+								</li>
+								<li>
+									<i class="text-info fa-regular fa-circle-check fa-fw"></i>
+									<span>Viral Video Class 3 days</span>
+								</li>
+
+							</ul>
 						</div>
 						<div class="text-center mt-5 pb-5">
-							<a href="#" class="btn bg-info btn-lg text-light"> Get this course </a>
+							<a href="https://wa.me/6585896007/?text=Hi%2C%20I%20need%20more%20info%20about%20Gold%20program."
+								class="btn bg-info btn-lg text-light" target="_blank">
+								<span style="font-size: 16px; font-weight: 200;"> Get this course </span>
+							</a>
 						</div>
-					</div>
-				</div><!-- END COL  -->
+					</div><!-- END COL  -->
+				</div>
 
 				<div class="col-xs-12 col-md-6 col-lg-4	col-sm-12 mr-auto">
 					<div class="price-card pricingTable-2 shadow">
 						<div class="pricingTable-header text-center">
-							<div class="bg-danger p-3 text-light" style="width: 100%;">
+
+							<div class="p-3 bg-danger">
 								<h3 class="title text-light">Diamond</h3>
 							</div>
-							<h3 class="price-value mt-2 pt-4"><strike>$698</strike></h3>
-							<h1>$498 + $100</h1>
+							<p class="price-value mt-2 pt-4" style="color: #303030;"><strike>$2098</strike>
+							<h1><span class="text-danger"><sup>$</sup>498</span>
+								<span><i class="fa-solid fa-plus fa-2xs" style="background:MistyRose"></i></span>
+								<span class="text-danger"><sup>$</sup>100</span>
+							</h1>
+							<ul class="pricing-content text-center mt-4" style="list-style-type: none;">
+								<li>
+									<i class="text-danger fa-regular fa-circle-check fa-fw"></i>
+									<span>Registration
+										fee $30</span>
+								</li>
+								<li>
+									<i class="text-danger fa-regular fa-circle-check fa-fw"></i>
+									<span>Viral Video Class 3 days</span>
+								</li>
+								<li>
+									<i class="text-danger fa-regular fa-circle-check fa-fw"></i>
+									<span>Free Consult with MrKokom</span>
+								</li>
+							</ul>
 						</div>
 						<div class="text-center mt-5 pb-5">
-							<a href="#" class="btn bg-danger btn-lg text-light"> Get this course </a>
+							<a href="https://wa.me/6585896007/?text=Hi%2C%20I%20need%20more%20info%20about%20Diamond%20program."
+								class="btn bg-danger btn-lg text-light">
+								<span style="font-size: 16px; font-weight: 200;">
+									Get this course </span>
+							</a>
 						</div>
 					</div>
 				</div><!-- END COL  -->
-			</div>
-
-		</div>
 	</section>
 	<!-- END -->
 
@@ -1362,7 +1397,7 @@
 				<ul>
 					<div class="card bg-white shadow-sm mb-2">
 						<li data-aos="fade-up">
-							<i class="bx bx-help-circle icon-help"></i>
+							<i class="bx bx-help-circle icon-help" style="color: #0d5360ff;"></i>
 							<a data-bs-toggle="collapse" class="collapsed" data-bs-target="#faq-list-1">Reasons why
 								videos go viral<i class="bx bx-chevron-down icon-show"></i><i
 									class="bx bx-chevron-up icon-close"></i>
@@ -1376,7 +1411,7 @@
 
 					<div class="card bg-white shadow-sm mb-2">
 						<li data-aos="fade-up">
-							<i class="bx bx-help-circle icon-help"></i>
+							<i class="bx bx-help-circle icon-help" style="color: #0d5360ff;"></i>
 							<a data-bs-toggle="collapse" data-bs-target="#faq-list-2" class="collapsed">How does a video
 								go viral?
 								<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i>
@@ -1392,7 +1427,7 @@
 
 					<div class="card bg-white shadow-sm mb-2">
 						<li data-aos="fade-up">
-							<i class="bx bx-help-circle icon-help"></i>
+							<i class="bx bx-help-circle icon-help" style="color: #0d5360ff;"></i>
 							<a data-bs-toggle="collapse" data-bs-target="#faq-list-3" class="collapsed">How many views
 								is viral videos?<i class="bx bx-chevron-down icon-show"></i><i
 									class="bx bx-chevron-up icon-close"></i>
@@ -1406,7 +1441,7 @@
 
 					<div class="card bg-white shadow-sm mb-2">
 						<li data-aos="fade-up">
-							<i class="bx bx-help-circle icon-help"></i>
+							<i class="bx bx-help-circle icon-help" style="color: #0d5360ff;"></i>
 							<a data-bs-toggle="collapse" data-bs-target="#faq-list-4" class="collapsed">Which social
 								media is best for videos?<i class="bx bx-chevron-down icon-show"></i><i
 									class="bx bx-chevron-up icon-close"></i>
@@ -1420,9 +1455,9 @@
 
 					<div class="card bg-white shadow-sm mb-2">
 						<li data-aos="fade-up">
-							<i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse"
-								data-bs-target="#faq-list-5" class="collapsed">Why do some ideas go viral?<i
-									class="bx bx-chevron-down icon-show"></i><i
+							<i class="bx bx-help-circle icon-help" style="color: #0d5360ff;"></i> <a
+								data-bs-toggle="collapse" data-bs-target="#faq-list-5" class="collapsed">Why do some
+								ideas go viral?<i class="bx bx-chevron-down icon-show"></i><i
 									class="bx bx-chevron-up icon-close"></i></a>
 							<div id="faq-list-5" class="collapse" data-bs-parent=".faq-list">
 								<p>content that feels novel or that fills information gaps may trigger the release of
@@ -1433,9 +1468,9 @@
 
 					<div class="card bg-white shadow-sm mb-2">
 						<li data-aos="fade-up">
-							<i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse"
-								data-bs-target="#faq-list-6" class="collapsed">How to join viral video bootcamp?<i
-									class="bx bx-chevron-down icon-show"></i><i
+							<i class="bx bx-help-circle icon-help" style="color: #0d5360ff;"></i> <a
+								data-bs-toggle="collapse" data-bs-target="#faq-list-6" class="collapsed">How to join
+								viral video bootcamp?<i class="bx bx-chevron-down icon-show"></i><i
 									class="bx bx-chevron-up icon-close"></i></a>
 							<div id="faq-list-6" class="collapse" data-bs-parent=".faq-list">
 								<p>Click the WA button and you'll be directed to our sales.</p>
@@ -1445,9 +1480,9 @@
 
 					<div class="card bg-white shadow-sm mb-2">
 						<li data-aos="fade-up">
-							<i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse"
-								data-bs-target="#faq-list-7" class="collapsed">What will I learn in this bootcamp?<i
-									class="bx bx-chevron-down icon-show"></i><i
+							<i class="bx bx-help-circle icon-help" style="color: #0d5360ff;"></i> <a
+								data-bs-toggle="collapse" data-bs-target="#faq-list-7" class="collapsed">What will I
+								learn in this bootcamp?<i class="bx bx-chevron-down icon-show"></i><i
 									class="bx bx-chevron-up icon-close"></i></a>
 							<div id="faq-list-7" class="collapse" data-bs-parent=".faq-list">
 								<p>You will learn best practice in making video to get viral with best tools and
@@ -1456,19 +1491,66 @@
 						</li>
 					</div>
 
+					<div class="card bg-white shadow-sm mb-2">
+						<li data-aos="fade-up">
+							<i class="bx bx-help-circle icon-help" style="color: #0d5360ff;"></i> <a
+								data-bs-toggle="collapse" data-bs-target="#faq-list-8" class="collapsed">Our Viral Video
+								Masterclass are not claimable via?<i class="bx bx-chevron-down icon-show"></i><i
+									class="bx bx-chevron-up icon-close"></i></a>
+							<div id="faq-list-8" class="collapse" data-bs-parent=".faq-list">
+								<!-- <p>You will learn best practice in making video to get viral with best tools and
+									ultimate blueprint from our lecturers.</p> -->
+								<p>&#8211; SkillsFuture <br>
+									&#8211; UTAP <br>
+									&#8211; SDF Funding <br>
+								</p>
+							</div>
+						</li>
+					</div>
+
 				</ul>
 			</div>
 
 		</div>
-	</section><!-- End Frequently Asked Questions Section -->
+	</section>
+	<!-- End Frequently Asked Questions Section -->
 
 	<!-- START Section 11-->
-	<div id="section11" class="about-content-three"
+	<!-- <div id="section11" class="about-content-three"
 		style="background-image: url(assets/img/DSC3.JPG);  background-size:cover;background-position:center;">
 		<div class="container">
 			<div class="d-flex flex-column">
 				<a class="ctaa2_btn text-center rounded-pill"
 						href="https://wa.me/6585896007/?text=Hi%2C%20I%27m%20interested%20in%20your%20program.">Get Offer and Viral Now !</a>
+			</div>
+		</div>
+	</div>
+			<div class="row">
+				<div class="col-lg-8 offset-lg-2 col-sm-12 col-xs-12">
+					<div class="text-light">
+						<h2 class="text-light"><strong> Get Offer & </strong></h2>
+						<h2 class="text-light"><strong> Go Viral Now </strong></h2>
+						<div class="cta">
+							<a class="get_btn mt-2 p-3" aria-label="Chat on WhatsApp"
+								href="https://wa.me/6585896007/?text=Hi%2C%20I%27m%20interested%20in%20your%20program."
+								target="_blank">
+								<i class="fa-brands fa-whatsapp fa-fw"></i> Chat on Whatsapp
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+	</div> -->
+
+	<div id="section11" class="about-content-three"
+		style="background-image: url(assets/img/DSC3.JPG);  background-size:cover;background-position:center;">
+		<div class="container">
+			<div class="d-flex flex-column">
+				<a class="ctaa2_btn text-center rounded-pill"
+					href="https://wa.me/6585896007/?text=Hi%2C%20I%27m%20interested%20in%20your%20program.">Get Offer
+					and Go Viral Now!</a>
 			</div>
 		</div>
 	</div>
@@ -1568,7 +1650,7 @@
 			smartSpeed: 400,
 			center: true,
 			// navText: ['&#8592;', '&#8594;'],
-			navText: ['<i class="fa fa-chevron-left prev"></i>', '<i class="fa fa-chevron-right next"></i>'],
+			navText: ['<i class="prev fa fa-chevron-left "></i>', '<i class="fa fa-chevron-right next"></i>'],
 			responsive: {
 				0: {
 					items: 1,
