--- a/privacypolice.html
+++ b/privacypolice.html
@@ -14,7 +14,10 @@
 		rel="stylesheet">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800">
 	<!-- fonts CSS -->
-	<link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+	<!-- <link rel="stylesheet" href="assets/fonts/font-awesome.min.css"> -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+		integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link rel="stylesheet" href="assets/fonts/themify-icons.css">
 	<!--- owl carousel Css-->
 	<link rel="stylesheet" href="assets/owlcarousel/css/owl.carousel.css">
@@ -60,12 +63,12 @@
 <body data-spy="scroll" data-offset="80">
 
 	<!-- START PRELOADER -->
-	<!-- <div class="preloader">
+	<div class="preloader">
 		<div class="spinner">
 			<div class="double-bounce1"></div>
 			<div class="double-bounce2"></div>
 		</div>
-	</div> -->
+	</div>
 	<!-- END PRELOADER -->
 
 	<!-- START NAVBAR -->
